# mapbox-pixelmatch-cpp

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yml
include/mapbox/: pixelmatch.hpp
test/: bench.cpp  picopng.hpp  png_decode.hpp  test.cpp
